perbaikan pada asset

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ FLASK_ENV=development
 # Used for CDN (in production)
 # No Slash at the end
 ASSETS_ROOT=/static/assets
+ASSETS_ROOT2=/static/assets2
 
 # If DEBUG=False (production mode)
 # DB_ENGINE=mysql
