--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,12 @@ Flask_Migrate==3.1.0
 Flask_Minify==0.37
 Flask_SQLAlchemy==2.5.1
 Flask_WTF==1.0.0
-# gensim==4.3.3
+gensim==4.3.3
 Jinja2==3.0.2
 nltk==3.9.1
 numpy==1.26.4
-# pandas==2.2.3
+pandas==2.2.3
 Requests==2.32.3
 SQLAlchemy==1.4.29
 WTForms==3.0.0
+email_validator==1.1.3
